# rafka-test-as-client

./: .gitignore  Cargo.toml  main.rs
app/: Cargo.toml  Dockerfile
app/crates/consumer/src/: consumer.rs
app/src/: main.rs
broker/: Cargo.toml  Dockerfile
broker/crates/broker/src/: broker.rs
broker/crates/core/src/proto/: rafka.proto
broker/crates/producer/src/: producer.rs
broker/src/: main.rs
k8s/: app-deployment.yaml  app-service.yaml  broker-deployment.yaml  broker-service.yaml  rafka-deployment.yaml  rafka-service.yaml  rafka-test-client-deployment.yaml  rafka-test-client-service.yaml
src/: Dockerfile
