[package]
name = "rafka-test-as-client"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
rafka-broker = { path = "crates/broker" }
rafka-core = { path = "crates/core" }
rafka-producer = { path = "crates/producer" }
rafka-consumer = { path = "crates/consumer" }
rafka-storage = { path = "crates/storage" }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[workspace]
members = [
    "crates/broker",
    "crates/core",
    "crates/producer",
    "crates/consumer",
    "crates/storage"
]
